--- a/ir_code.ipynb
+++ b/ir_code.ipynb
@@ -5,7 +5,7 @@
    "id": "def3c69a",
    "metadata": {},
    "source": [
-    "# Setup"
+    "# Imports"
    ]
   },
   {
@@ -15,8 +15,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install ir_datasets\n",
     "import ir_datasets\n",
+    "from datetime import datetime\n",
+    "from elasticsearch import Elasticsearch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c404081",
+   "metadata": {},
+   "source": [
+    "# Load dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97a21baf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset = ir_datasets.load(\"clinicaltrials/2021\")"
    ]
   },
@@ -32,24 +50,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4c1b6f16",
+   "cell_type": "markdown",
+   "id": "3f2d6bd5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: elasticsearch==7.9.1 in /home/srishankar/.local/lib/python3.8/site-packages (7.9.1)\n",
-      "Requirement already satisfied: urllib3>=1.21.1 in /usr/lib/python3/dist-packages (from elasticsearch==7.9.1) (1.25.8)\n",
-      "Requirement already satisfied: certifi in /usr/lib/python3/dist-packages (from elasticsearch==7.9.1) (2019.11.28)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
    "source": [
-    "pip install elasticsearch==7.9.1"
+    "# Init elasticsearch connector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b275fb6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es = Elasticsearch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cdec453",
+   "metadata": {},
+   "source": [
+    "# Test insert document"
    ]
   },
   {
@@ -89,11 +112,6 @@
    ],
    "source": [
     "#Test elasticsearch\n",
-    "\n",
-    "from datetime import datetime\n",
-    "from elasticsearch import Elasticsearch\n",
-    "es = Elasticsearch()\n",
-    "\n",
     "doc = {\n",
     "    'author': 'kimchy',\n",
     "    'text': 'Elasticsearch: cool. bonsai cool.',\n",
@@ -115,10 +133,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "628060d41b56468f159594b0c74695b4ba7bb30fdc3af4d0c8184e2473e25920"
+  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.8.2 ('venv': venv)",
    "language": "python",
-   "name": "python3810jvsc74a57bd0916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -130,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
