Added code to persist outputs, added output files

--- a/ES_Interactions.ipynb
+++ b/ES_Interactions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ead31531",
+   "id": "bb211fb8",
    "metadata": {},
    "source": [
     "### Acquire Data and Queries"
@@ -44,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "9abef237",
+   "execution_count": 1,
+   "id": "b239cb64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef935329",
+   "id": "d30cdb64",
    "metadata": {},
    "source": [
     "### Install ES package, connect to ES service"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dbb308f",
+   "id": "c563838b",
    "metadata": {},
    "source": [
     "# Load Data into ElasticSearch"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "313d83b3",
+   "id": "518e4013",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,8 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "c9158fc6",
+   "execution_count": 3,
+   "id": "8677c300",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "  'eligibility': '\\n      \\n        Inclusion Criteria:\\r\\n\\r\\n          -  diagnosed with Congenital Adrenal Hyperplasia (CAH)\\r\\n\\r\\n          -  normal ECG during baseline evaluation\\r\\n\\r\\n        Exclusion Criteria:\\r\\n\\r\\n          -  history of liver disease, or elevated liver function tests\\r\\n\\r\\n          -  history of cardiovascular disease\\r\\n      \\n    '}}"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1591066a",
+   "id": "914037d7",
    "metadata": {},
    "source": [
     "# Run Queries"
@@ -209,8 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "id": "85e61c73",
+   "execution_count": 4,
+   "id": "0bf84ba6",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61c96f94",
+   "id": "5a3b65ae",
    "metadata": {},
    "source": [
     "### Check example query on ES"
@@ -336,8 +336,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "46ab91e0",
+   "execution_count": 5,
+   "id": "c670ba46",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "'Patient is a 45-year-old man with a history of anaplastic astrocytoma of the spine complicated by severe lower extremity weakness and urinary retention s/p Foley catheter, high-dose steroids, hypertension, and chronic pain. The tumor is located in the T-L spine, unresectable anaplastic astrocytoma s/p radiation. Complicated by progressive lower extremity weakness and urinary retention. Patient initially presented with RLE weakness where his right knee gave out with difficulty walking and right anterior thigh numbness. MRI showed a spinal cord conus mass which was biopsied and found to be anaplastic astrocytoma. Therapy included field radiation t10-l1 followed by 11 cycles of temozolomide 7 days on and 7 days off. This was followed by CPT-11 Weekly x4 with Avastin Q2 weeks/ 2 weeks rest and repeat cycle.'"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,8 +358,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "id": "9af1c59a",
+   "execution_count": 6,
+   "id": "c33ffb6c",
    "metadata": {
     "scrolled": true
    },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68dacb1b",
+   "id": "2af01ffd",
    "metadata": {},
    "source": [
     "##### Note: \n",
@@ -400,8 +400,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
-   "id": "00bfe3ba",
+   "execution_count": 7,
+   "id": "b3575708",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "  'eligibility': \"\\n      \\n        DISEASE CHARACTERISTICS: Histologically confirmed malignant glioma - Recurrent glioblastoma\\r\\n        - Anaplastic astrocytoma - Mixed anaplastic glioma For recurrent glioblastoma: Required\\r\\n        documented progression must include an increase in tumor size of at least 25% or appearance\\r\\n        of new lesion For anaplastic astrocytoma or mixed anaplastic glioma: Must have measurable,\\r\\n        contrast enhancing disease on postoperative CT or MRI scan No postoperative radiation or\\r\\n        chemotherapy If patients have received prior brachytherapy or stereotactic radiosurgery,\\r\\n        they must have confirmation of true progressive disease rather than radiation necrosis by\\r\\n        PET scanning or biopsy\\r\\n\\r\\n        PATIENT CHARACTERISTICS: Age: 18 and over Performance status: Karnofsky 60-100% Life\\r\\n        expectancy: Not specified Hematopoietic: WBC at least 3,500/mm3 Absolute neutrophil count\\r\\n        at least 1,800/mm3 Platelet count at least 125,000/mm3 Hemoglobin at least 9 g/dL\\r\\n        (transfusion allowed) Hepatic: Bilirubin less than 1.5 mg/dL SGOT less than 2.0 times upper\\r\\n        limit of normal Renal: Creatinine less than 1.5 mg/dL OR Creatinine clearance greater than\\r\\n        70 mL/min Cardiovascular: No uncontrolled arrhythmias or conduction defects No unstable or\\r\\n        newly diagnosed angina pectoris No New York Heart Association class II-IV heart disease No\\r\\n        congestive heart failure No major problems with edema (e.g., severe Cushing's syndrome,\\r\\n        residual leg swelling from deep-vein thrombosis) No recent coronary artery disease No\\r\\n        poorly controlled hypertension (diastolic greater than 110 mmHg and systolic greater than\\r\\n        180 mmHg) Pulmonary: DLCO greater than 80% of expected value Other: HIV negative No major\\r\\n        psychiatric illness No other prior malignancy except adequately treated basal cell or\\r\\n        squamous cell skin cancer, in situ cervical cancer, adequately treated stage I or II cancer\\r\\n        from which the patient is currently in complete remission, or any other cancer from which\\r\\n        the patient has been free of disease for 5 years Not pregnant or nursing Adequate\\r\\n        contraception required of all fertile patients\\r\\n\\r\\n        PRIOR CONCURRENT THERAPY: Biologic therapy: No concurrent biologic therapy Chemotherapy: No\\r\\n        prior nitrosourea or temozolomide No more than 1 prior chemotherapy regimen allowed for\\r\\n        patients with glioblastoma At least 6 weeks since mitomycin or procarbazine and recovered\\r\\n        At least 4 weeks since other prior chemotherapy and recovered No other concurrent\\r\\n        chemotherapy Endocrine therapy: If receiving steroids, must be on a stable steroid dose for\\r\\n        at least 72 hours prior to study No other concurrent endocrine therapy Radiotherapy: At\\r\\n        least 6 weeks since radiotherapy No greater than 10-20% of marrow irradiated in prior\\r\\n        radiotherapy No other concurrent radiotherapy Surgery: Surgery allowed\\r\\n      \\n    \"}}"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "39920aac",
+   "id": "26d1c36c",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "f42532eb",
+   "id": "9561500b",
    "metadata": {},
    "outputs": [
     {
@@ -473,46 +473,110 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81beda2b",
+   "id": "72098cdc",
    "metadata": {},
    "source": [
     "### Run all queries"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4d975452",
-   "metadata": {},
-   "source": [
-    "\n",
-    "TODO - How do we persist the hits?? \n",
-    "\n",
-    "The way hits_list[] is used in the cell below should probably change. Maybe we only need the docID and the score?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 207,
-   "id": "d8118b21",
+   "execution_count": 27,
+   "id": "c0f66c46",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query  0  got 10000 Hits:\n",
-      "Query  1  got 10000 Hits:\n",
-      "Query  2  got 10000 Hits:\n"
+      "Query  0  got 10000 Hits\n",
+      "Query  1  got 10000 Hits\n",
+      "Query  2  got 10000 Hits\n",
+      "Query  3  got 10000 Hits\n",
+      "Query  4  got 10000 Hits\n",
+      "Query  5  got 10000 Hits\n",
+      "Query  6  got 10000 Hits\n",
+      "Query  7  got 10000 Hits\n",
+      "Query  8  got 10000 Hits\n",
+      "Query  9  got 10000 Hits\n",
+      "Query  10  got 10000 Hits\n",
+      "Query  11  got 10000 Hits\n",
+      "Query  12  got 10000 Hits\n",
+      "Query  13  got 10000 Hits\n",
+      "Query  14  got 10000 Hits\n",
+      "Query  15  got 10000 Hits\n",
+      "Query  16  got 10000 Hits\n",
+      "Query  17  got 10000 Hits\n",
+      "Query  18  got 10000 Hits\n",
+      "Query  19  got 10000 Hits\n",
+      "Query  20  got 10000 Hits\n",
+      "Query  21  got 10000 Hits\n",
+      "Query  22  got 10000 Hits\n",
+      "Query  23  got 10000 Hits\n",
+      "Query  24  got 10000 Hits\n",
+      "Query  25  got 10000 Hits\n",
+      "Query  26  got 10000 Hits\n",
+      "Query  27  got 10000 Hits\n",
+      "Query  28  got 10000 Hits\n",
+      "Query  29  got 10000 Hits\n",
+      "Query  30  got 10000 Hits\n",
+      "Query  31  got 10000 Hits\n",
+      "Query  32  got 10000 Hits\n",
+      "Query  33  got 10000 Hits\n",
+      "Query  34  got 10000 Hits\n",
+      "Query  35  got 10000 Hits\n",
+      "Query  36  got 10000 Hits\n",
+      "Query  37  got 10000 Hits\n",
+      "Query  38  got 10000 Hits\n",
+      "Query  39  got 10000 Hits\n",
+      "Query  40  got 10000 Hits\n",
+      "Query  41  got 10000 Hits\n",
+      "Query  42  got 10000 Hits\n",
+      "Query  43  got 10000 Hits\n",
+      "Query  44  got 10000 Hits\n",
+      "Query  45  got 10000 Hits\n",
+      "Query  46  got 10000 Hits\n",
+      "Query  47  got 10000 Hits\n",
+      "Query  48  got 10000 Hits\n",
+      "Query  49  got 10000 Hits\n",
+      "Query  50  got 10000 Hits\n",
+      "Query  51  got 10000 Hits\n",
+      "Query  52  got 10000 Hits\n",
+      "Query  53  got 10000 Hits\n",
+      "Query  54  got 10000 Hits\n",
+      "Query  55  got 10000 Hits\n",
+      "Query  56  got 10000 Hits\n",
+      "Query  57  got 10000 Hits\n",
+      "Query  58  got 10000 Hits\n",
+      "Query  59  got 10000 Hits\n",
+      "Query  60  got 10000 Hits\n",
+      "Query  61  got 10000 Hits\n",
+      "Query  62  got 10000 Hits\n",
+      "Query  63  got 10000 Hits\n",
+      "Query  64  got 10000 Hits\n",
+      "Query  65  got 10000 Hits\n",
+      "Query  66  got 10000 Hits\n",
+      "Query  67  got 10000 Hits\n",
+      "Query  68  got 10000 Hits\n",
+      "Query  69  got 10000 Hits\n",
+      "Query  70  got 10000 Hits\n",
+      "Query  71  got 10000 Hits\n",
+      "Query  72  got 10000 Hits\n",
+      "Query  73  got 10000 Hits\n",
+      "Query  74  got 10000 Hits\n"
      ]
     }
    ],
    "source": [
-    "hits_list = []\n",
-    "\n",
     "for id in range(75):\n",
     "    \n",
+    "    #List of pairs of document ID and score\n",
+    "    hits_list = []\n",
+    "    \n",
+    "    #Initialize query - 75 in total\n",
     "    query_text = queries['query'][id]\n",
     "    \n",
+    "    #Wrap query inside specific format\n",
     "    bool_query = {\n",
     "        \"size\": 10000,\n",
     "        \"query\": \n",
@@ -534,10 +598,142 @@
     "        }\n",
     "    }\n",
     "    \n",
+    "    #Hit ES\n",
     "    resp = es.search(index='ir3', body=bool_query)\n",
     "    print(\"Query \",id,\" got %d Hits\" % resp['hits']['total']['value'])\n",
     "    \n",
-    "    hits_list.append(resp['hits']['hits'])"
+    "    #Store only the part of the response that holds relevant info about hits\n",
+    "    hits = resp['hits']['hits']\n",
+    "    \n",
+    "    #Store only the docID and the scores\n",
+    "    for hit in hits:\n",
+    "        hits_list.append([hit['_id'], hit['_score']])\n",
+    "        \n",
+    "    #Write output onto file named as the ID of the query\n",
+    "    hits_file_name = 'ES_outputs/'+str(id)+'.csv'\n",
+    "    hits_file = open(hits_file_name, 'w')\n",
+    "    for row in hits_list:\n",
+    "        hits_file.write(row[0]+','+ str(row[1])+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6a20e185",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>186624</td>\n",
+       "      <td>124.377304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>197815</td>\n",
+       "      <td>118.727760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>265040</td>\n",
+       "      <td>117.103160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>162790</td>\n",
+       "      <td>113.149770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>145249</td>\n",
+       "      <td>113.108060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>62943</td>\n",
+       "      <td>44.418755</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>16011</td>\n",
+       "      <td>44.418575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>93361</td>\n",
+       "      <td>44.417557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>270166</td>\n",
+       "      <td>44.417347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>80315</td>\n",
+       "      <td>44.416700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0           1\n",
+       "0     186624  124.377304\n",
+       "1     197815  118.727760\n",
+       "2     265040  117.103160\n",
+       "3     162790  113.149770\n",
+       "4     145249  113.108060\n",
+       "...      ...         ...\n",
+       "9995   62943   44.418755\n",
+       "9996   16011   44.418575\n",
+       "9997   93361   44.417557\n",
+       "9998  270166   44.417347\n",
+       "9999   80315   44.416700\n",
+       "\n",
+       "[10000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Sample line of code to retrieve stored file\n",
+    "hits_df = pd.read_csv('ES_outputs/2.csv', sep=',', header=None)\n",
+    "hits_df"
    ]
   }
  ],
