query output filenames start from 1 instead of 0 now

--- a/ES_Interactions.ipynb
+++ b/ES_Interactions.ipynb
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "c0f66c46",
    "metadata": {},
    "outputs": [
@@ -519,51 +519,7 @@
       "Query  27  got 10000 Hits\n",
       "Query  28  got 10000 Hits\n",
       "Query  29  got 10000 Hits\n",
-      "Query  30  got 10000 Hits\n",
-      "Query  31  got 10000 Hits\n",
-      "Query  32  got 10000 Hits\n",
-      "Query  33  got 10000 Hits\n",
-      "Query  34  got 10000 Hits\n",
-      "Query  35  got 10000 Hits\n",
-      "Query  36  got 10000 Hits\n",
-      "Query  37  got 10000 Hits\n",
-      "Query  38  got 10000 Hits\n",
-      "Query  39  got 10000 Hits\n",
-      "Query  40  got 10000 Hits\n",
-      "Query  41  got 10000 Hits\n",
-      "Query  42  got 10000 Hits\n",
-      "Query  43  got 10000 Hits\n",
-      "Query  44  got 10000 Hits\n",
-      "Query  45  got 10000 Hits\n",
-      "Query  46  got 10000 Hits\n",
-      "Query  47  got 10000 Hits\n",
-      "Query  48  got 10000 Hits\n",
-      "Query  49  got 10000 Hits\n",
-      "Query  50  got 10000 Hits\n",
-      "Query  51  got 10000 Hits\n",
-      "Query  52  got 10000 Hits\n",
-      "Query  53  got 10000 Hits\n",
-      "Query  54  got 10000 Hits\n",
-      "Query  55  got 10000 Hits\n",
-      "Query  56  got 10000 Hits\n",
-      "Query  57  got 10000 Hits\n",
-      "Query  58  got 10000 Hits\n",
-      "Query  59  got 10000 Hits\n",
-      "Query  60  got 10000 Hits\n",
-      "Query  61  got 10000 Hits\n",
-      "Query  62  got 10000 Hits\n",
-      "Query  63  got 10000 Hits\n",
-      "Query  64  got 10000 Hits\n",
-      "Query  65  got 10000 Hits\n",
-      "Query  66  got 10000 Hits\n",
-      "Query  67  got 10000 Hits\n",
-      "Query  68  got 10000 Hits\n",
-      "Query  69  got 10000 Hits\n",
-      "Query  70  got 10000 Hits\n",
-      "Query  71  got 10000 Hits\n",
-      "Query  72  got 10000 Hits\n",
-      "Query  73  got 10000 Hits\n",
-      "Query  74  got 10000 Hits\n"
+      "Query  30  got 10000 Hits\n"
      ]
     }
    ],
@@ -610,7 +566,7 @@
     "        hits_list.append([hit['_id'], hit['_score']])\n",
     "        \n",
     "    #Write output onto file named as the ID of the query\n",
-    "    hits_file_name = 'ES_outputs/'+str(id)+'.csv'\n",
+    "    hits_file_name = 'ES_outputs/'+str(id+1)+'.csv'\n",
     "    hits_file = open(hits_file_name, 'w')\n",
     "    for row in hits_list:\n",
     "        hits_file.write(row[0]+','+ str(row[1])+'\\n')"
@@ -619,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6a20e185",
+   "id": "754e62ed",
    "metadata": {},
    "outputs": [
     {
